<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/data_phone_backup_btn"
            android:text="@string/data_phone_backup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/data_phone_restore_btn"
            android:text="@string/data_phone_restore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/data_sms_backup_btn"
            android:text="@string/data_sms_backup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/data_sms_restore_btn"
            android:text="@string/data_sms_restore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/settings_showusbdebug"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/settings_showsdcardandusbdisk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.2dip"
            android:background="#000000"/>-->

        <include
            layout="@layout/loading"/>
    </LinearLayout>

</ScrollView>
