<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_mytoast"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8_dp">
        <ImageView
            android:id="@+id/iv_addresser_portrait"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:src="@drawable/gee"/>
        <TextView
            android:id="@+id/iv_addresser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:layout_toRightOf="@id/iv_addresser_portrait"
            android:layout_alignTop="@id/iv_addresser_portrait"
            android:text="@string/sender_name"
            android:textColor="#01A8DB"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/iv_addresser_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_addresser_name"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:layout_toRightOf="@id/iv_addresser_portrait"
            android:layout_alignBottom="@id/iv_addresser_portrait"
            android:text="@string/sender_number"
            android:textColor="#01A8DB"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/iv_addresser_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_8_dp"
            android:background="@drawable/textbutton"
            android:padding="5dip"
            android:src="@android:drawable/ic_delete"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/iv_previous"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_gravity="center_vertical"
            android:src="@drawable/previous"
            android:visibility="invisible"/>
        <LinearLayout
            android:id="@+id/ll_storesmsbody_container"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_weight="1000"
            android:orientation="vertical">
        </LinearLayout>
        <ImageButton
            android:id="@+id/iv_next"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_gravity="center_vertical"
            android:src="@drawable/next"
            android:visibility="invisible"/>
    </LinearLayout>
    <!-- 	    <TextView
                android:id="@+id/iv_addresser_content"
                android:layout_width="match_parent"
                android:layout_height="250dip"
                android:textColor="#000000"
                android:textSize="20sp" /> -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_sms_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:text="1/1"/>
        <TextView
            android:id="@+id/tv_sms_receive_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_sms_counts"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_8_dp"
            android:drawableLeft="@drawable/sms"
            android:gravity="center_vertical"
            android:text="13:18"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_sendsms"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="#ADFF77"
            android:hint="@string/sendsms"
            android:paddingLeft="@dimen/dimen_8_dp"
            android:maxLines="3"
            android:visibility="visible"/>
        <ImageButton
            android:id="@+id/ib_go"
            android:layout_width="0dip"
            android:layout_height="48dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/go"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_operation_delete"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textbutton"
            android:src="@drawable/ic_delete_btn"/>
        <TextView
            android:id="@+id/iv_operation_markread"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textbutton"
            android:gravity="center"
            android:text="@string/operation_markread"
            android:textColor="#E3B87D"
            android:textSize="35sp"/>
        <TextView
            android:id="@+id/iv_operation_reply"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textbutton"
            android:gravity="center"
            android:text="@string/operation_reply"
            android:textColor="#E3B87D"
            android:textSize="35sp"/>
    </LinearLayout>

</LinearLayout>
